<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"/>
    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        style="android:listSeparatorTextViewStyle"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"/>
    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.DatePicker" />

    <Button
        android:id="@+id/button_chooseSuspect"
        android:layout_width="match_parent"
        android:textAllCaps="true"
        android:textSize="15dp"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:text="@string/chooseSuspect" />

    <Button
        android:id="@+id/button_sendCrime"
        android:layout_width="match_parent"
        android:textAllCaps="true"
        android:textSize="15dp"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:text="@string/send_report" />

    <Button
        android:id="@+id/button_AddCrime"
        android:layout_width="match_parent"
        android:textAllCaps="true"
        android:textSize="15dp"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:text="@string/addCrime" />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"/>
</LinearLayout>